--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: ruby
 
 rvm:
-  - 2.2.5
+  - 2.3.1
 
 env:
+  - RAILS_VERSION=6.0.0
   - RAILS_VERSION=5.2.0
   - RAILS_VERSION=4.2.0
   - RAILS_VERSION=3.2.22
