--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,13 @@ addons:
 
 install: ./ci/build.sh
 
+services:
+  - xvfb
+
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - sleep 3
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 script: ./ci/test.sh
 
