--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ install: ./ci/build.sh
 env:
   - RAILS_VERSION=6.0.0
   - RAILS_VERSION=5.2.0
+  - RAILS_VERSION=4.2.0
+  - RAILS_VERSION=3.2.22
 
 addons:
   apt:
