--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,12 @@ dist: trusty
 language: ruby
 rvm:
   - 2.5.3
-
-notifications:
-  email: false
+  - 2.3.1
 
 before_install:
   - gem install bundler -v '~> 1.0'
 
 install: ./ci/build.sh
-
-env:
-  - RAILS_VERSION=6.0.0
-  - RAILS_VERSION=5.2.0
-  - RAILS_VERSION=4.2.0
-  - RAILS_VERSION=3.2.22
 
 addons:
   apt:
@@ -28,6 +20,17 @@ addons:
       - qtdeclarative5-dev
 
 script: ./ci/test.sh
+
+matrix:
+  include:
+    - rvm: '2.5.3'
+      env:
+      - RAILS_VERSION=6.0.0
+      - RAILS_VERSION=5.2.0
+    - rvm: '2.3.5'
+      env:
+      - RAILS_VERSION=4.2.0
+      - RAILS_VERSION=3.3.2.2
 
 jobs:
   include:
